Fix rowspan header alignment and scroll border behavior

--- a/handsontable/src/styles/components/plugins/_nested-headers.scss
+++ b/handsontable/src/styles/components/plugins/_nested-headers.scss
@@ -6,8 +6,19 @@
       border-inline-start-width: 0;
     }
 
+    thead th.htRowspanHeader {
+      height: auto;
+    }
+
     &.htRowHeaders thead tr:last-child th:first-child {
       border-end-start-radius: 0;
+    }
+
+    .ht_master:not(.innerBorderTop):not(.innerBorderBottom) {
+      thead th.htRowspanBottomLevel,
+      & ~ .handsontable thead th.htRowspanBottomLevel {
+        border-bottom-width: 0;
+      }
     }
 
     thead th.hiddenHeader:not(:first-of-type) {
